--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "chai-http": "^3.0.0",
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "mocha": "^4.0.1"
   }
 }
