--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "mocha": "^4.0.1",
     "supertest": "^3.0.0"
   }
