--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
+    "router": "^1.3.2",
     "supertest": "^3.0.0"
   }
 }
