--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,5 +34,4 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: npm start
-      - run: npm test
+      - run: npm start & npm test
