--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,9 @@ jobs:
         
       # run tests!
       - run: npm start
-  test: 
+  test:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:7.10
+    steps:
       - run: npm test
