adding test file

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",
     "build:prod": "npm run build",
     "start": "npm run build:prod && NODE_ENV=production node ./build/server/index.js",
-    "test": "./node_modules/.bin/mocha --exit"
+    "test": "./node_modules/.bin/mocha test.js --exit"
   },
   "author": "Aygerim Sauletkhan",
   "license": "ISC",
