--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,5 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:7.10
     steps:
+      - checkout
       - run: npm test
