--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "build": "babel ./server -d build/server",
     "build:watch": "babel ./server -d build/server --watch",
-    "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",
-    "build:prod": "npm run build",
-    "start": "npm run build:prod && node ./build/server/index.js",
+    // "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",
+    // "build:prod": "npm run build",
+    // "start": "npm run build:prod && node ./build/server/index.js",
     "test": "./node_modules/.bin/mocha --exit"
   },
   "author": "Aygerim Sauletkhan",
