--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "babel ./server -d build/server",
     "build:watch": "babel ./server -d build/server --watch",
     // "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",
-    // "build:prod": "npm run build",
+    "build:prod": "npm run build",
     // "start": "npm run build:prod && node ./build/server/index.js",
     "test": "./node_modules/.bin/mocha --exit"
   },
