--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "test"
   },
   "scripts": {
-    "build": "babel ./server -d build/server",			
-    "build:watch": "babel ./server -d build/server --watch",			
-    "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",			
-    "build:prod": "npm run build",			
-    "start": "npm run build:prod && node ./build/server/index.js",			
-    "test": "./node_modules/.bin/mocha ./test"			
+    "build": "babel ./server -d build/server",
+    "build:watch": "babel ./server -d build/server --watch",
+    "start:dev": "parallelshell 'npm run build:watch' 'nodemon ./build/server/index.js' ",
+    "build:prod": "npm run build",
+    "start": "npm run build:prod && node ./build/server/index.js",
+    "test": "./node_modules/.bin/mocha --exit"
   },
   "author": "Aygerim Sauletkhan",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "parallelshell": "^3.0.2"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "dotenv": "^4.0.0",
