--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ node_js:
 - 8.4.0
 before_script:
 - npm run build:prod
-script: node ./build/server/index.js & npm run test
+- node ./build/server/index.js
+script: 
+  # node ./build/server/index.js 
+  npm run test
