--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "csv-write-stream": "^2.0.0",
     "dotenv": "^4.0.0",
+    "elastic-apm": "^0.5.0",
+    "elastic-apm-node": "^0.9.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
+    "neo4j": "^2.0.0-RC2",
+    "neo4j-driver": "^1.5.1",
     "router": "^1.3.2",
     "supertest": "^3.0.0"
   }
