--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "csv-write-stream": "^2.0.0",
     "dotenv": "^4.0.0",
     "elastic-apm": "^0.5.0",
+    "elastic-apm-node": "^0.9.0",
     "express": "^4.16.2",
     "mocha": "^4.0.1",
     "neo4j": "^2.0.0-RC2",
